# snapcast-mpris-proxy

./: Makefile  README.md  pyproject.toml  snapcast-monitor-kasa.py  snapcast-mpris-proxy-policy.conf  snapcast-mpris-proxy.service  snapcast_monitor_kasa.py  snapcast_mpris_proxy.py
.github/workflows/: checks.yml
