[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snapcast-mpris-proxy"
description = "Proxy Snapcast client and stream status to MPRIS D-Bus interface."
version = "1.0.0"
readme = "README.md"
authors = [
  {name = "Tucker Kern", email = "tuckkern@gmail.com"},
]
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "dbus-fast",
  "snapcast @ git+https://github.com/happyleavesaoc/python-snapcast.git@master"
]

[project.urls]
Repository = "https://github.com/mill1000/snapcast-mpris-proxy"
Issues = "https://github.com/mill1000/snapcast-mpris-proxy/issues"

[project.scripts]
snapcast-mpris-proxy = "snapcast_mpris_proxy:main"

[tool.setuptools]
py-modules = ["snapcast_mpris_proxy"]
